--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.4"
   },
